bad/bin_op_ne_bool_int.example_compiler_output
ERROR
[1mbad/bin_op_ne_bool_int.lat:3:7: [1;31merror: [0;1moperator != cannot compare values of types `boolean` and `int` because values are not convertible to either of the two types[m
	true != 42;
	     [1;32m^[m
